--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "server": "nodemon server/index.js",
+    "client": "npm run dev --prefix client",
+    "dev": "concurrently \"npm run server\" \"npm run client\"",
     "start": "node server/index.js",
     "build": "npm install --prefix server && npm install --prefix client && npm run build --prefix client"
   },
@@ -17,5 +20,9 @@
   "bugs": {
     "url": "https://github.com/DawidZyluk/MERN-auth/issues"
   },
-  "homepage": "https://github.com/DawidZyluk/MERN-auth#readme"
+  "homepage": "https://github.com/DawidZyluk/MERN-auth#readme",
+  "devDependencies": {
+    "concurrently": "^8.2.0",
+    "nodemon": "^3.0.1"
+  }
 }
